--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,3 +8,5 @@
      project_path(@project),
      :method => :delete,
      :confirm => "Are you sure you want to delete this project?" %>
+
+<%= link_to "New Step", new_project_step_path(@project) %>
