--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -1,4 +1,5 @@
 <div id='step'>
   <h2><%= @step.title %></h2>
+  <%= link_to "Edit Step", [:edit, @project, @step] %>
   <%= simple_format(@step.description) %>
 </div>
