--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -1,5 +1,7 @@
 <div id='step'>
   <h2><%= @step.title %></h2>
   <%= link_to "Edit Step", [:edit, @project, @step] %>
+  <%= link_to "Delete Step", [@project, @step], :method => :delete,
+       :confirm => "Are you sure you want to delete this step?" %>
   <%= simple_format(@step.description) %>
 </div>
